# doors-isometric

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
assets/: config.lua  k8s.yaml
src/: cli.rs  floorplan.rs  main.rs
src/camera/: camera_component.rs  camera_plugin.rs  camera_systems.rs  mod.rs
src/integration/: integration_plugin.rs  integration_utils.rs  mod.rs
src/integration/k8s_file/: k8s_integration_plugin.rs  k8s_integration_systems.rs  k8s_json.rs  mod.rs
src/integration/k8s_live/: k8s_api.rs  k8s_integration_plugin.rs  k8s_integration_systems.rs  mod.rs
src/integration/test_mode/: mod.rs  test_mode_plugin.rs  test_mode_systems.rs
src/perf/: mod.rs  perf_component.rs  perf_plugin.rs  perf_system.rs
src/player/: mod.rs  player_component.rs  player_plugin.rs  player_systems.rs
src/state/: mod.rs  state_component.rs  state_plugin.rs  state_system.rs
src/world/: mod.rs  world_component.rs  world_plugin.rs  world_systems.rs
