[package]
name = "doors-isometric"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2"
bevy = "0.15"
petgraph = "0.7"
clap = { version = "4", features = ["derive", "color"] }
iyes_perf_ui = "0.4"
leafwing-input-manager = "0.16"
k8s-openapi = { version = "0.24", features = ["latest"] }
kube = { version = "0.99", features = ["runtime", "derive"] }

[dev-dependencies]
bevy_dylib = "0.15"

[features]
default = ["k8s", "perfmon"]
k8s = []
perfmon = []

