[package]
name = "doors-isometric"
version = "0.2.1"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2"
bevy = "0.15"
bevy-tokio-tasks = "0.15"
bevy_embedded_assets = "0.12"
bevy_mod_scripting = { version = "0.13.0", features = ["lua54"]}
clap = { version = "4", features = ["derive", "color"] }
iyes_perf_ui = "0.4"
jsonpath_lib = "0.3"
k8s-openapi = { version = "0.26", features = ["latest"] }
kube = { version = "2", features = ["runtime", "derive"] }
leafwing-input-manager = "0.16"
petgraph = "0.8"
rlua = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full", "macros"] }

[dev-dependencies]
bevy_dylib = "0.15"

[features]
default = ["k8s", "perfmon"]
k8s = []
perfmon = []
